--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://img.icons8.com/offices/30/000000/globe.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Sunny Travel Company</title>
 </head>
@@ -24,7 +25,6 @@
         <nav id="nav-bar" class="nav-bar">
             <ul>
                 <li><a href="#offerings" class="nav-link page-button rounded-border">Offerings</a></li>
-                <li><a href="#pricing" class="nav-link page-button rounded-border">Pricing</a></li>
                 <li><a href="#about-us" class="nav-link page-button rounded-border">About Us</a></li>
             </ul>
         </nav>
@@ -32,19 +32,29 @@
 
     <!-- CONTENT -->
     <main class="content">
-        <!-- OFFERINGS -->
-        <section id="offerings">
-            <h2>Offerings</h2>
-            <h3>Why You Should Travel</h3>
+        <!-- WHY -->
+        <section id="why-travel">
+            <h2>Why You Should Travel</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/aaExiKsvt9A"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </section>
 
-        <!-- PRICING -->
-        <section id="pricing">
-            <h2>Pricing</h2>
+        <!-- Offerings -->
+        <section id="offerings">
+            <h2>Offerings</h2>
+            <div class="cards">
+                <div class="card rounded-border">
+                    <div class="card-title">Basic</div>
+                </div>
+                <div class="card rounded-border">
+                    <div class="card-title">Premium</div>
+                </div>
+                <div class="card rounded-border">
+                    <div class="card-title">Luxury</div>
+                </div>
+            </div>
 
             <!-- FORM -->
             <h3>Ready to get started?</h3>
