--- a/index.html
+++ b/index.html
@@ -47,19 +47,34 @@
             <div class="cards">
                 <div class="card rounded-border">
                     <div class="card-title">Basic</div>
+                    <ul>
+                        <li>Personalized itinerary to your destination of choice</li>
+                        <li>Visa assistance</li>
+                        <li>$100 Prepaid Visa Card</li>
+                    </ul>
                 </div>
                 <div class="card rounded-border">
                     <div class="card-title">Premium</div>
+                    <ul>
+                        <li>Everything included in Basic</li>
+                        <li>Booking assistance with airfare and hotels</li>
+                        <li>Travel and Medical Insurance</li>
+                    </ul>
                 </div>
                 <div class="card rounded-border">
                     <div class="card-title">Luxury</div>
+                    <ul>
+                        <li>Everything included in Basic and Premium</li>
+                        <li>Access to exclusive actitivies and discounts</li>
+                        <li></li>
+                    </ul>
                 </div>
             </div>
 
             <!-- FORM -->
             <h3>Ready to get started?</h3>
             <form action="https://www.freecodecamp.com/email-submit" id="form">
-                <input type="email" name="email" id="email" placeholder="Enter your email">
+                <input type="email" name="email" id="email" class="rounded-border" placeholder="Enter your email">
                 <input id="submit" type="submit" class="page-button rounded-border" value="Get on your way!"></input>
             </form>
         </section>
