update card text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://img.icons8.com/offices/30/000000/globe.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/32bf735cb4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Sunny Travel Company</title>
 </head>
@@ -46,28 +47,47 @@
             <h2>Offerings</h2>
             <div class="cards">
                 <div class="card rounded-border">
-                    <div class="card-title">Basic</div>
+                    <h3 class="card-title">Basic</h3>
                     <ul>
-                        <li>Personalized itinerary to your destination of choice</li>
-                        <li>Visa assistance</li>
-                        <li>$100 Prepaid Visa Card</li>
+                        <li><i class="fas fa-check"></i> Personalized itinerary</li>
+                        <li><i class="fas fa-check"></i> Passport & visa assistance</li>
+                        <li><i class="fas fa-check"></i> $100 Prepaid Visa Card</li>
+                        <li><i class="fas fa-times"></i> &nbsp;Reservation assistance</li>
+                        <li><i class="fas fa-times"></i> &nbsp;Travel & medical insurance</li>
+                        <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies & discounts</li>
                     </ul>
+                    <!-- <div class="pricing">
+                        <p><span class="subtext">Starts at</span><span class="price-text"> $300</span></p>
+                    </div> -->
                 </div>
                 <div class="card rounded-border">
-                    <div class="card-title">Premium</div>
+                    <h3 class="card-title">Premium</h3>
                     <ul>
-                        <li>Everything included in Basic</li>
-                        <li>Booking assistance with airfare and hotels</li>
-                        <li>Travel and Medical Insurance</li>
+                        <li><i class="fas fa-check"></i> Personalized itinerary</li>
+                        <li><i class="fas fa-check"></i> Passport & visa assistance</li>
+                        <li><i class="fas fa-check"></i> $200 Prepaid Visa Card</li>
+                        <li><i class="fas fa-check"></i> Reservation assistance</li>
+                        <li><i class="fas fa-times"></i> &nbsp;Travel & medical insurance</li>
+                        <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies & discounts</li>
                     </ul>
+                    <!-- <div class="pricing">
+                        <p><span class="subtext">Starts at</span><span class="price-text"> $400</span></p>
+                    </div> -->
                 </div>
                 <div class="card rounded-border">
-                    <div class="card-title">Luxury</div>
+                    <h3 class="card-title">Luxury</h3>
                     <ul>
-                        <li>Everything included in Basic and Premium</li>
-                        <li>Access to exclusive actitivies and discounts</li>
+                        <li><i class="fas fa-check"></i> Personalized itinerary</li>
+                        <li><i class="fas fa-check"></i> Passport & visa assistance</li>
+                        <li><i class="fas fa-check"></i> $500 Prepaid Visa Card</li>
+                        <li><i class="fas fa-check"></i> Reservation assistance</li>
+                        <li><i class="fas fa-check"></i> Travel & medical insurance</li>
+                        <li><i class="fas fa-check"></i> Exclusive actitivies & discounts</li>
                         <li></li>
                     </ul>
+                    <!-- <div class="pricing">
+                        <p><span class="subtext">Starts at</span><span class="price-text"> $800</span></p>
+                    </div> -->
                 </div>
             </div>
 
