update card text

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
                         <li><i class="fas fa-check"></i> Passport & visa assistance</li>
                         <li><i class="fas fa-check"></i> $100 Prepaid Visa Card</li>
+                        <li><i class="fas fa-check"></i> &nbsp;Partner discounts</li>
                         <li><i class="fas fa-times"></i> &nbsp;Reservation assistance</li>
                         <li><i class="fas fa-times"></i> &nbsp;Travel & medical insurance</li>
-                        <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies & discounts</li>
+                        <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies</li>
                     </ul>
                     <!-- <div class="pricing">
                         <p><span class="subtext">Starts at</span><span class="price-text"> $300</span></p>
@@ -66,9 +67,10 @@
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
                         <li><i class="fas fa-check"></i> Passport & visa assistance</li>
                         <li><i class="fas fa-check"></i> $200 Prepaid Visa Card</li>
+                        <li><i class="fas fa-check"></i> &nbsp;Partner discounts</li>
                         <li><i class="fas fa-check"></i> Reservation assistance</li>
                         <li><i class="fas fa-times"></i> &nbsp;Travel & medical insurance</li>
-                        <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies & discounts</li>
+                        <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies</li>
                     </ul>
                     <!-- <div class="pricing">
                         <p><span class="subtext">Starts at</span><span class="price-text"> $400</span></p>
@@ -80,10 +82,10 @@
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
                         <li><i class="fas fa-check"></i> Passport & visa assistance</li>
                         <li><i class="fas fa-check"></i> $500 Prepaid Visa Card</li>
+                        <li><i class="fas fa-check"></i> &nbsp;Partner discounts</li>
                         <li><i class="fas fa-check"></i> Reservation assistance</li>
                         <li><i class="fas fa-check"></i> Travel & medical insurance</li>
-                        <li><i class="fas fa-check"></i> Exclusive actitivies & discounts</li>
-                        <li></li>
+                        <li><i class="fas fa-check"></i> &nbsp;Exclusive actitivies</li>
                     </ul>
                     <!-- <div class="pricing">
                         <p><span class="subtext">Starts at</span><span class="price-text"> $800</span></p>
