add pricing html

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                         <li><i class="fas fa-times"></i> &nbsp;Travel & medical insurance</li>
                         <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies</li>
                     </ul>
-                    <!-- <div class="pricing">
+                    <div class="pricing">
                         <p><span class="subtext">Starts at</span><span class="price-text"> $300</span></p>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="card rounded-border">
                     <h3 class="card-title">Premium</h3>
@@ -72,9 +72,9 @@
                         <li><i class="fas fa-times"></i> &nbsp;Travel & medical insurance</li>
                         <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies</li>
                     </ul>
-                    <!-- <div class="pricing">
+                    <div class="pricing">
                         <p><span class="subtext">Starts at</span><span class="price-text"> $400</span></p>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="card rounded-border">
                     <h3 class="card-title">Luxury</h3>
@@ -87,9 +87,9 @@
                         <li><i class="fas fa-check"></i> Travel & medical insurance</li>
                         <li><i class="fas fa-check"></i> &nbsp;Exclusive actitivies</li>
                     </ul>
-                    <!-- <div class="pricing">
+                    <div class="pricing">
                         <p><span class="subtext">Starts at</span><span class="price-text"> $800</span></p>
-                    </div> -->
+                    </div>
                 </div>
             </div>
 
