--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <nav id="nav-bar" class="nav-bar">
             <ul>
-                <li><a href="#offerings" class="nav-link page-button rounded-border">Offerings</a></li>
-                <li><a href="#about-us" class="nav-link page-button rounded-border">About Us</a></li>
+                <li><a href="#offerings" class="nav-link page-button rounded-border box-shadow">Offerings</a></li>
+                <li><a href="#about-us" class="nav-link page-button rounded-border box-shadow">About Us</a></li>
             </ul>
         </nav>
     </header>
@@ -46,7 +46,7 @@
         <section id="offerings">
             <h2>Offerings</h2>
             <div class="cards">
-                <div class="card rounded-border">
+                <div class="card rounded-border box-shadow">
                     <h3 class="card-title">Basic</h3>
                     <ul>
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
@@ -61,7 +61,7 @@
                         <p><span class="subtext">Starts at</span><span class="price-text"> $300</span></p>
                     </div>
                 </div>
-                <div class="card rounded-border">
+                <div class="card rounded-border box-shadow">
                     <h3 class="card-title">Premium</h3>
                     <ul>
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
@@ -76,7 +76,7 @@
                         <p><span class="subtext">Starts at</span><span class="price-text"> $400</span></p>
                     </div>
                 </div>
-                <div class="card rounded-border">
+                <div class="card rounded-border box-shadow">
                     <h3 class="card-title">Luxury</h3>
                     <ul>
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
@@ -97,7 +97,8 @@
             <h3>Ready to get started?</h3>
             <form action="https://www.freecodecamp.com/email-submit" id="form">
                 <input type="email" name="email" id="email" class="rounded-border" placeholder="Enter your email">
-                <input id="submit" type="submit" class="page-button rounded-border" value="Get on your way!"></input>
+                <input id="submit" type="submit" class="page-button rounded-border box-shadow"
+                    value="Get on your way!"></input>
             </form>
         </section>
 
