--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
             <h3>Ready to get started?</h3>
             <form action="https://www.freecodecamp.com/email-submit" id="form">
                 <input type="email" name="email" id="email" class="rounded-border" placeholder="Enter your email">
-                <input id="submit" type="submit" class="page-button rounded-border box-shadow"
-                    value="Get on your way!"></input>
+                <input id="submit" type="submit" class="page-button rounded-border box-shadow" value="Get on your way!">
             </form>
         </section>
 
