add intro and about us text

--- a/index.html
+++ b/index.html
@@ -33,9 +33,25 @@
 
     <!-- CONTENT -->
     <main class="content">
+        <h1 class="intro-h1">Sunny Travel Company</h1>
+        <p class="intro-p">Your trusted travel partner since 2020</p>
         <!-- WHY -->
         <section id="why-travel">
-            <h2>Why You Should Travel</h2>
+            <h2 class="section-header">Why You Should Travel</h2>
+            <div class="travel-benefits">
+                <div class="travel-ben-row">
+                    <i class="fas fa-globe-americas"></i>
+                    <p>Experience cultures in different parts of the world</p>
+                </div>
+                <div class="travel-ben-row">
+                    <i class="fas fa-spa"></i>
+                    <p>An opportunity to relax your mind, body, and soul</p>
+                </div>
+                <div class="travel-ben-row">
+                    <i class="fas fa-heart"></i>
+                    <p>Make lasting memories with family and friends</p>
+                </div>
+            </div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/aaExiKsvt9A"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -44,7 +60,7 @@
 
         <!-- Offerings -->
         <section id="offerings">
-            <h2>Offerings</h2>
+            <h2 class="section-header">Offerings</h2>
             <div class="cards">
                 <div class="card rounded-border box-shadow">
                     <h3 class="card-title">Basic</h3>
@@ -103,7 +119,15 @@
 
         <!-- ABOUT US -->
         <section id="about-us">
-            <h2>About Us</h2>
+            <h2 class="section-header">About Us</h2>
+            <p class="text-shadow">Sunny Travel Company was founded by Jane Doe in 2020. Undeterred by the pandemic, she
+                was determined to
+                keep the travel industry thriving by offering deposit-based personalized itenaries held on retainer for
+                future use. Being stuck at home does not mean we have to lose our ability to dream! When not traveling
+                the world, making new connections and friends, you can find Jane clacking away at her keyboard working
+                on her first novel, supported by her loving chihuahua Bert.</p>
+            <img src="https://github.com/hilbug/freecodecamp-product-landing-page/blob/main/sunny-travel-co-logo.png?raw=true"
+                class="medium-image" alt="sunny travel company logo">
 
             <!-- PRODUCT VIDEO -->
             <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/AlCqyZEXM1I"
