text shadow and footer html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h2 class="section-header">Offerings</h2>
             <div class="cards">
                 <div class="card rounded-border box-shadow">
-                    <h3 class="card-title">Basic</h3>
+                    <h3 class="card-title text-shadow">Basic</h3>
                     <ul>
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
                         <li><i class="fas fa-check"></i> Passport & visa assistance</li>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="card rounded-border box-shadow">
-                    <h3 class="card-title">Premium</h3>
+                    <h3 class="card-title text-shadow">Premium</h3>
                     <ul>
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
                         <li><i class="fas fa-check"></i> Passport & visa assistance</li>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="card rounded-border box-shadow">
-                    <h3 class="card-title">Luxury</h3>
+                    <h3 class="card-title text-shadow">Luxury</h3>
                     <ul>
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
                         <li><i class="fas fa-check"></i> Passport & visa assistance</li>
@@ -136,6 +136,11 @@
                 allowfullscreen></iframe>
         </section>
     </main>
+
+    <!-- Footer -->
+    <footer>
+
+    </footer>
 
 </body>
 
