add footer text html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,17 @@
 
     <!-- Footer -->
     <footer>
-
+        <div class="header-logo">
+            <img id="header-img"
+                src="https://github.com/hilbug/freecodecamp-product-landing-page/blob/main/sunny-travel-co-logo.png?raw=true"
+                class="smaller-image" alt="sunny travel company logo">
+            <p>©&nbsp;Sunny Travel Company</p>
+        </div>
+        <div class="footer-links">
+            <p>Privacy</p>
+            <p>Terms</p>
+            <p>Contact</p>
+        </div>
     </footer>
 
 </body>
