--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
         <nav id="nav-bar" class="nav-bar">
             <ul>
+                <li><a href="#why-travel" class="nav-link page-button rounded-border box-shadow">Why Travel</a></li>
                 <li><a href="#offerings" class="nav-link page-button rounded-border box-shadow">Offerings</a></li>
                 <li><a href="#about-us" class="nav-link page-button rounded-border box-shadow">About Us</a></li>
             </ul>
