add id footer-img

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <!-- Footer -->
     <footer>
         <div class="header-logo">
-            <img id="header-img"
+            <img id="footer-img"
                 src="https://github.com/hilbug/freecodecamp-product-landing-page/blob/main/sunny-travel-co-logo.png?raw=true"
                 class="smaller-image" alt="sunny travel company logo">
             <p>©&nbsp;Sunny Travel Company</p>
