fix word and padding to intro h1

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
             <h2 class="section-header">About Us</h2>
             <p class="text-shadow">Sunny Travel Company was founded by Jane Doe in 2020. Undeterred by the pandemic, she
                 was determined to
-                keep the travel industry thriving by offering deposit-based personalized itenaries held on retainer for
+                keep the travel industry thriving by offering deposit-based personalized itineraries held on retainer
+                for
                 future use. Being stuck at home does not mean we have to lose our ability to dream! When not traveling
                 the world, making new connections and friends, you can find Jane clacking away at her keyboard working
                 on her first novel, supported by her loving chihuahua Bert.</p>
