fix word and space

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <li><i class="fas fa-check"></i> &nbsp;Partner discounts</li>
                         <li><i class="fas fa-times"></i> &nbsp;Reservation assistance</li>
                         <li><i class="fas fa-times"></i> &nbsp;Travel & medical insurance</li>
-                        <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies</li>
+                        <li><i class="fas fa-times"></i> &nbsp;Exclusive activities</li>
                     </ul>
                     <div class="pricing">
                         <p><span class="subtext">Starts at</span><span class="price-text"> $300</span></p>
@@ -87,7 +87,7 @@
                         <li><i class="fas fa-check"></i> &nbsp;Partner discounts</li>
                         <li><i class="fas fa-check"></i> Reservation assistance</li>
                         <li><i class="fas fa-times"></i> &nbsp;Travel & medical insurance</li>
-                        <li><i class="fas fa-times"></i> &nbsp;Exclusive actitivies</li>
+                        <li><i class="fas fa-times"></i> &nbsp;Exclusive activities</li>
                     </ul>
                     <div class="pricing">
                         <p><span class="subtext">Starts at</span><span class="price-text"> $400</span></p>
@@ -99,10 +99,10 @@
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
                         <li><i class="fas fa-check"></i> Passport & visa assistance</li>
                         <li><i class="fas fa-check"></i> $500 Prepaid Visa Card</li>
-                        <li><i class="fas fa-check"></i> &nbsp;Partner discounts</li>
+                        <li><i class="fas fa-check"></i> Partner discounts</li>
                         <li><i class="fas fa-check"></i> Reservation assistance</li>
                         <li><i class="fas fa-check"></i> Travel & medical insurance</li>
-                        <li><i class="fas fa-check"></i> &nbsp;Exclusive actitivies</li>
+                        <li><i class="fas fa-check"></i> Exclusive activities</li>
                     </ul>
                     <div class="pricing">
                         <p><span class="subtext">Starts at</span><span class="price-text"> $800</span></p>
