--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                         <li><i class="fas fa-times"></i> &nbsp;Exclusive activities</li>
                     </ul>
                     <div class="pricing">
-                        <p><span class="subtext">Starts at</span><span class="price-text"> $300</span></p>
+                        <p class="text-shadow"><span class="subtext">Starts at</span><span class="price-text">
+                                $300</span></p>
                     </div>
                 </div>
                 <div class="card rounded-border box-shadow">
@@ -84,13 +85,14 @@
                         <li><i class="fas fa-check"></i> Personalized itinerary</li>
                         <li><i class="fas fa-check"></i> Passport & visa assistance</li>
                         <li><i class="fas fa-check"></i> $200 Prepaid Visa Card</li>
-                        <li><i class="fas fa-check"></i> &nbsp;Partner discounts</li>
+                        <li><i class="fas fa-check"></i> Partner discounts</li>
                         <li><i class="fas fa-check"></i> Reservation assistance</li>
                         <li><i class="fas fa-times"></i> &nbsp;Travel & medical insurance</li>
                         <li><i class="fas fa-times"></i> &nbsp;Exclusive activities</li>
                     </ul>
                     <div class="pricing">
-                        <p><span class="subtext">Starts at</span><span class="price-text"> $400</span></p>
+                        <p class="text-shadow"><span class="subtext">Starts at</span><span class="price-text">
+                                $400</span></p>
                     </div>
                 </div>
                 <div class="card rounded-border box-shadow">
@@ -105,7 +107,8 @@
                         <li><i class="fas fa-check"></i> Exclusive activities</li>
                     </ul>
                     <div class="pricing">
-                        <p><span class="subtext">Starts at</span><span class="price-text"> $800</span></p>
+                        <p class="text-shadow"><span class="subtext">Starts at</span><span class="price-text">
+                                $800</span></p>
                     </div>
                 </div>
             </div>
